# antibody-abtigen

./: .claude  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  inspect_npz.py  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
antibody_abtigen/: __init__.py  cli.py  epitope.py  filtering.py  mapping.py  pipeline.py  pymol_env.py  sabdab.py  structure.py  triplet.py  yaml_converter.py
antibody_abtigen/epitope_pipeline/: __init__.py  aligner.py  cleaner.py  encoder.py  epitope_log.py  extractor.py  grouper.py  orchestrator.py  storage.py  validator.py
antibody_abtigen/epitope_pipeline/core/: __init__.py  config.py  dataclasses.py  exceptions.py  interfaces.py
docs/analysis/: clustering_comparison.md
docs/dev/: Python项目执行计划：人源-鼠源抗原结构配对数据集构建.md  SAbDab_数据集搭建思路.md  cropper.md  from_cif_to_boltzlike_yaml.md  implementation_progress.md  不考虑同源关系通过表位定义相似.md  人源-鼠源抗原结构对数据集构建计划.md  从基因同源性到三维结构对齐.md  建立人源鼠源抗体数据集.md  重构.md
docs/outlines/: epitope_pipeline_progress.md  数据结构说明.md  项目概述.md
docs/reference/: 01_summary.md  02_decuplication.md  03_generate.md  04_cutoff.md  05_cluster.md  06_split.md  mmseq2.md
docs/scripts/: 01_download_sabdab.md  09_提取抗原表位.md  10_cluster_by_same_antibody.md  10_cluster_epitopes.md  11_align_structures.md  12_analyze_cluster_rmsds.md  13_clean_and_split.md  14_generatr_boltzgen_like_yamls.md
docs/src/: README.md  cli.md  dependencies.md  filtering.md  mapping.md  pipeline.md  pymol_env.md  sabdab.md  structure.md  yaml_converter.md
scripts/: 01_download_sabdab.py  02_run_summary.sh  03_run_decuplication.sh  04_pdb_to_cif.py  05_run_cutoff.sh  06_run_cluster.sh  07_run_split.sh  09_extract_epitope.py  10_cluster_by_same_antibody.py  10_cluster_epitopes.py  11_align_structures.py  12_analyze_cluster_rmsds.py  13_clean_and_split.py  14_generate_boltzgen_like_yamls.py  15_extract_multi_antigen_clusters.py  16_extract_multi_antigen_cleaned_data.py  17_prepare_multi_antigen_yamls.py  18_prepare_single_antigen_yamls.py  19_prepare_test_yamls.py  20_prepare_tests_boltzgen_like_yamls.py  check_alignment.pml  check_alignment.py  check_alignment_pymol.py  check_alignment_v2.py  download_esm_model.py  download_sabdab.py  fetch_sabdab_structures.py  run_full_pipeline.sh  run_test.sh
scripts/reference/: 01_summary.py  02_decuplication.py  04_cutoff.py  06_split.py
src/: __init__.py  pipeline.py  sabdab.py
src/antibody_antigen/: cropper.py
tests/: __init__.py  conftest.py  test_epitope.py  test_placeholder.py
tests/aligner/: test_aligner.py
tests/cleaner/: README.md  batch_clean_with_filter.py  check_cif_chains.py  convert_cleaned_to_pdb.py  debug_cif_structure.py  filtering_log.csv  test_cleaner_demo.py  test_edge_cases.py  test_filtering.py  test_load_cleaned_cif.py  test_sabdab_filtering.py
tests/cleaner/output_cleaned/: 12E8_cleaned.cif  15C8_cleaned.cif  1A0Q_cleaned.cif  1A14_cleaned.cif  1A2Y_cleaned.cif  1A3L_cleaned.cif  1A3R_cleaned.cif  1A4J_cleaned.cif  1A4K_cleaned.cif
tests/encoder/: test_encoder.py
tests/epitope_pipeline/: test_cleaner.py  test_core.py  test_extractor.py  test_integration.py
tests/grouper/: test_grouper.py
tests/orchestrator/: test_orchestrator.py
tests/outputs/: .gitkeep
