[project]
name = "antibody-abtigen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "click>=8.3.1",
    "pandas>=2.3.3",
    "pymol-open-source>=3.2.0a0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
